--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@iml/chroma_ui",
-  "version": "1.0.1",
+  "name": "@iml/old-gui",
+  "version": "0.0.0",
   "description": "",
   "scripts": {
     "test": "karma start"
