Remove lodash usage in templates.
We have lodash usage in templates. This means we need to bundle all of lodash in the view-server, which adds unnecessary bulk.

Instead remove all usages of lodash.

Also remove closed-source code and add travis file.

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.intel.com/IML/old-gui.git"
+    "url": "https://github.com/intel-hpdd/old-gui.git"
   },
   "publishConfig": {
-    "registry": "https://ubit-artifactory-or.intel.com/artifactory/api/npm/iml-npm-local"
+    "access": "public"
   },
   "devDependencies": {
     "jasmine-core": "2.4.1",
