--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
+language: node_js
+node_js:
+- 6
+cache: yarn
+script:
+- echo "Tests not running"
 deploy:
   provider: npm
   email: joe.grund@intel.com
