--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "@iml/old-gui",
-  "version": "2.1.2",
+  "version": "3.0.0",
   "description": "",
   "scripts": {
-    "test": "karma start"
+    "test": "karma start",
+    "postversion": "true"
   },
+  "files": [
+    "static",
+    "templates"
+  ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/intel-hpdd/old-gui.git"
+    "url": "https://github.com/whamcloud/old-gui.git"
   },
   "publishConfig": {
     "access": "public"
