--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,11 @@ jobs:
     - stage: deploy-npm
       if: branch =~ ^v\d+\.\d+\.\d+-1.*$
       env: Type='npm Deploy'
+      script: skip
       before_deploy:
         - npm i --ci
       deploy:
         provider: npm
-        skip_cleanup: true
         email: "$NPM_EMAIL"
         api_key: "$NPM_TOKEN"
         on:
@@ -25,7 +25,6 @@ jobs:
       before_deploy:
         - openssl aes-256-cbc -K $encrypted_253525cedcf6_key -iv $encrypted_253525cedcf6_iv -in copr-mfl.enc -out copr-key -d
       deploy:
-        skip_cleanup: true
         provider: script
         script: docker run -it --name copr -v $(pwd):/builddir imlteam/dotnet-docker bash -c 'yum install -y rpmdevtools copr-cli && cd /builddir && fake run build.fsx -- --prod'
         on:
