--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,15 @@ services:
   - docker
 jobs:
   include:
+    - stage: cd
+      git:
+        depth: 999999
+      env: 'Type=Continuous Deployment'
+      script:
+        - docker run -dit --name copr -v $(pwd):/builddir imlteam/dotnet-docker /usr/sbin/init
+        - docker exec -it copr bash -c 'yum install -y rpmdevtools copr-cli git'
+        - docker exec -it copr bash -c "cd /builddir && fake run build.fsx --release=\$(git rev-list HEAD | wc -l) --copr-login=$COPR_LOGIN --copr-username=$COPR_USERNAME --copr-token=$COPR_TOKEN"
     - stage: deploy-npm
-      if: branch =~ ^v\d+\.\d+\.\d+-1.*$
       env: Type='npm Deploy'
       script: skip
       before_deploy:
@@ -16,17 +23,17 @@ jobs:
         provider: npm
         email: "$NPM_EMAIL"
         api_key: "$NPM_TOKEN"
-        on:
-          all_branches: true
     - stage: deploy-copr
-      if: branch =~ ^v\d+\.\d+\.\d+-.+$
       env: Type='Copr deploy'
       language: generic
-      before_deploy:
-        - openssl aes-256-cbc -K $encrypted_253525cedcf6_key -iv $encrypted_253525cedcf6_iv -in copr-mfl.enc -out copr-key -d
-      deploy:
-        skip_cleanup: true
-        provider: script
-        script: docker run -it --name copr -v $(pwd):/builddir imlteam/dotnet-docker bash -c 'yum install -y rpmdevtools copr-cli && cd /builddir && fake run build.fsx -- --prod'
-        on:
-          all_branches: true
+      script:
+        - docker run -dit --name copr -v $(pwd):/builddir imlteam/dotnet-docker /usr/sbin/init
+        - docker exec -it copr bash -c 'yum install -y rpmdevtools copr-cli'
+        - docker exec -it copr bash -c 'cd /builddir && fake run build.fsx --copr-login=$COPR_LOGIN --copr-username=$COPR_USERNAME --copr-token=$COPR_TOKEN --prod'
+stages:
+  - name: cd
+    if: branch = master AND type = push AND fork = false
+  - name: deploy-npm
+    if: branch =~ ^v\d+\.\d+\.\d+-1.*$
+  - name: deploy-copr
+    if: branch =~ ^v\d+\.\d+\.\d+-.+$
