--- a/iml-old-gui.spec.template
+++ b/iml-old-gui.spec.template
@@ -32,6 +32,8 @@ rm -rf %{buildroot}
 %{nodejs_sitelib}
 
 %changelog
+* Fri Oct 26 2018 Will Johnson <wjohnson@whamcloud.com> - 3.0.1-1
+- Fix double scrollbar issue
 * Tue Jun 19 2018 Joe Grund <jgrund@whamcloud.com> - 3.0.0-1
 - Build using FAKE
 - Initial standalone RPM package
