--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 language: node_js
 node_js:
-  - 6
+  - "6"
 services:
   - docker
 jobs:
@@ -9,13 +9,13 @@ jobs:
     - stage: cd
       git:
         depth: 999999
-      env: 'Type=Continuous Deployment'
+      name: "Continuous Deployment"
       script:
         - docker run -dit --name copr -v $(pwd):/builddir imlteam/dotnet-docker /usr/sbin/init
         - docker exec -it copr bash -c 'yum install -y rpmdevtools copr-cli git'
         - docker exec -it copr bash -c "cd /builddir && fake run build.fsx --release=\$(git rev-list HEAD | wc -l) --copr-login=$COPR_LOGIN --copr-username=$COPR_USERNAME --copr-token=$COPR_TOKEN"
     - stage: deploy-npm
-      env: Type='npm Deploy'
+      name: "npm Deploy"
       script: skip
       before_deploy:
         - npm i --ci
@@ -23,8 +23,10 @@ jobs:
         provider: npm
         email: "$NPM_EMAIL"
         api_key: "$NPM_TOKEN"
+        on:
+          all_branches: true
     - stage: deploy-copr
-      env: Type='Copr deploy'
+      name: "Copr deploy"
       language: generic
       script:
         - docker run -dit --name copr -v $(pwd):/builddir imlteam/dotnet-docker /usr/sbin/init
